Added: reload current library action in main activity. Added: local scanner now removes empty artists/genres/albums/etc. Added: PlayDesc - play store description. Updated: code cleanup (database management) Updated: code cleanup (ui package in providers)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,12 +66,12 @@
         </activity>
 
         <activity
-            android:name=".core.service.providers.local.UISearchPathsSettingsActivity"
+            android:name=".core.service.providers.local.ui.activities.SearchPathActivity"
             android:label="@string/label_scan_files" >
         </activity>
 
         <activity
-            android:name=".core.service.providers.local.UILocalContentSettingsActivity"
+            android:name=".core.service.providers.local.ui.activities.SettingsActivity"
             android:label="@string/label_scan_files" >
         </activity>
 
