--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,11 +65,13 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    /* ActionbarSherlock */     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
+    /* ActionbarSherlock */     //compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     /* NineOldAndroids */       compile 'com.nineoldandroids:library:2.4.0+'
     /* UniversalImageLoader */  compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
     /* SlidingupPanel */        compile 'com.sothree.slidinguppanel:library:+'
     /* PagerSLidingTabStrip */  compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     /* DragSortListView - directly in source tree - no longer maintained, previously : compile 'com.mobeta.android.dslv:drag-sort-listview:0.6.1' */
     compile 'com.android.support:support-v4:20.0+'
+    compile 'com.android.support:appcompat-v7:20.0+'
 }
+
