--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 20
-    buildToolsVersion "19.1.0"
+    buildToolsVersion '19.1.0'
 
     defaultConfig {
         applicationId "eu.chepy.audiokit"
-        minSdkVersion 8
+        minSdkVersion 9
         targetSdkVersion 20
         versionCode 1
         versionName "1.0.0.1"
@@ -65,13 +65,19 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    /* ActionbarSherlock */     //compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
-    /* NineOldAndroids */       compile 'com.nineoldandroids:library:2.4.0+'
-    /* UniversalImageLoader */  compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
-    /* SlidingupPanel */        compile 'com.sothree.slidinguppanel:library:+'
-    /* PagerSLidingTabStrip */  compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    /* ActionbarSherlock */
+    //compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
+    /* NineOldAndroids */
+    compile 'com.nineoldandroids:library:2.4.0+'
+    /* UniversalImageLoader */
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
+    /* SlidingupPanel */
+    compile 'com.sothree.slidinguppanel:library:+'
+    /* PagerSLidingTabStrip */
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     /* DragSortListView - directly in source tree - no longer maintained, previously : compile 'com.mobeta.android.dslv:drag-sort-listview:0.6.1' */
-    compile 'com.android.support:support-v4:20.0+'
+    compile 'com.google.android.gms:play-services:+'
     compile 'com.android.support:appcompat-v7:20.0+'
+    compile 'com.android.support:support-v4:20.0+'
 }
 
