--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     android:versionCode="1"
     android:versionName="1.0.1" >
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -14,6 +17,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AudioKit" >
+
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
+
         <service
             android:name=".core.service.PlayerService"
             android:enabled="true"
@@ -44,10 +50,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ui.activities.LibraryDetailActivity"
             android:theme="@style/AudioKit.TransparentActionBar" >
         </activity>
+
         <activity
             android:name=".ui.activities.SettingsLibrariesActivity"
             android:launchMode="singleTop"
@@ -60,6 +68,7 @@
             </intent-filter>
             -->
         </activity>
+
         <activity
             android:name=".ui.activities.SettingsApplicationActivity"
             android:label="@string/label_preferences" >
@@ -82,10 +91,15 @@
             android:name=".ui.activities.UtilDirectorySelectActivity"
             android:label="@string/label_scan_files" >
         </activity>
+
         <activity
             android:name=".ui.activities.CarModeActivity"
             android:theme="@style/Theme.AudioKit.FullScreenActivity" >
         </activity>
+
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
 
 
         <receiver
