--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,7 +105,7 @@
         </activity>
 
         <activity
-            android:name=".ui.activities.SettingsApplicationActivity"
+            android:name=".ui.activities.SettingsActivity"
             android:label="@string/label_preferences" >
         </activity>
 
