--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
+        debug {
+            jniDebugBuild true
+        }
     }
 }
 
