--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,17 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion '19.1.0'
+    compileSdkVersion 19
+    buildToolsVersion '20.0.0'
 
     defaultConfig {
         applicationId "eu.chepy.opus.player"
         minSdkVersion 9
-        targetSdkVersion 20
+        targetSdkVersion 19
         versionCode 1
         versionName "1.0.0.1"
     }
+
     productFlavors {
         x86 {
             versionCode Integer.parseInt("4" + defaultConfig.versionCode)
@@ -75,8 +76,8 @@ dependencies {
     /* PagerSLidingTabStrip */
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     /* DragSortListView - directly in source tree - no longer maintained, previously : compile 'com.mobeta.android.dslv:drag-sort-listview:0.6.1' */
-    compile 'com.android.support:appcompat-v7:20.0+'
-    compile 'com.android.support:support-v4:20.0+'
+    compile 'com.android.support:appcompat-v7:20.+'
+    compile 'com.android.support:support-v4:20.+'
     /*compile 'com.google.android.gms:play-services:5.2.8'*/
 }
 
