Added: first run assistant that checks premium and set up directories of default library.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,11 @@
         </receiver>
 
         <activity
+            android:name=".ui.activities.SetupActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        </activity>
+
+        <activity
             android:name=".ui.activities.LibraryMainActivity"
             android:launchMode="singleTop"
             android:theme="@style/AudioKit.NavigationDrawer" >
