Updated: DetailActivity is now DetailActivity and DetailWithHeaderActivity. Updated: Cleaned header code in DetailWithHeaderActivity. Fixed: Wrong context menu in DetailActivity. Fixed: Wrong playing in genre fragment.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,6 +95,11 @@
 
         <activity
             android:name=".ui.activities.LibraryDetailActivity"
+            android:theme="@style/AudioKit">
+        </activity>
+
+        <activity
+            android:name=".ui.activities.LibraryDetailWithHeaderActivity"
             android:theme="@style/AudioKit.TransparentActionBar">
         </activity>
 
