--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "eu.chepy.opus.player"
         minSdkVersion 9
         targetSdkVersion 19
-        versionCode 1
-        versionName "1.0.0.1"
+        versionCode 2
+        versionName "1.0.0.1b"
     }
 
     productFlavors {
