--- a/opusapp/build.gradle
+++ b/opusapp/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 21
     buildToolsVersion '20.0.0'
 
     defaultConfig {
         applicationId "net.opusapp.player"
         minSdkVersion 9
-        targetSdkVersion 19
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0.0.1"
     }
@@ -76,10 +76,11 @@ dependencies {
     /* PagerSLidingTabStrip */
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     /* DragSortListView - directly in source tree - no longer maintained, previously : compile 'com.mobeta.android.dslv:drag-sort-listview:0.6.1' */
-    compile 'com.android.support:appcompat-v7:20.+'
-    compile 'com.android.support:support-v4:20.+'
+    compile 'com.android.support:appcompat-v7:21.0.+'
+    compile 'com.android.support:support-v4:21.+'
+    compile 'com.google.android.gms:play-services:6.1.11'
 
     compile project(':opuslicensing');
-    /*compile 'com.google.android.gms:play-services:5.2.8'*/
+
 }
 
