--- a/opusapp/build.gradle
+++ b/opusapp/build.gradle
@@ -12,78 +12,55 @@ android {
         versionName "1.0.0.4"
     }
 
+    flavorGroups "abi", "version"
+
     productFlavors {
-        x86Premium {
+        premiumApp {
+            flavorGroup "version"
+            packageName 'net.opusapp.player.premium'
+
+            android.sourceSets.premiumApp.java.srcDirs = ['src/flavor-premium/java']
+            android.sourceSets.premiumApp.res.srcDirs = ['src/flavor-premium/res']
+        }
+
+        freeApp {
+            flavorGroup "version"
+            packageName 'net.opusapp.player'
+
+            android.sourceSets.freeApp.java.srcDirs = ['src/flavor-free/java']
+            android.sourceSets.freeApp.res.srcDirs = ['src/flavor-free/res']
+        }
+
+        x86 {
+            flavorGroup "abi"
             versionCode 4 * 1000000 + defaultConfig.versionCode
             ndk {
                 abiFilter "x86"
             }
-            packageName 'net.opusapp.player.premium'
-            buildConfigField 'boolean', 'premium', 'true'
         }
-        mipsPremium {
+        mips {
+            flavorGroup "abi"
             versionCode 3 * 1000000 + defaultConfig.versionCode
             ndk {
                 abiFilter "mips"
             }
-            packageName 'net.opusapp.player.premium'
-            buildConfigField 'boolean', 'premium', 'true'
         }
-        armv7Premium {
+        armv7 {
+            flavorGroup "abi"
             versionCode 2 * 1000000 + defaultConfig.versionCode
             ndk {
                 abiFilter "armeabi-v7a"
             }
-            packageName 'net.opusapp.player.premium'
-            buildConfigField 'boolean', 'premium', 'true'
         }
-        armPremium {
+        arm {
+            flavorGroup "abi"
             versionCode 1 * 1000000 + defaultConfig.versionCode
             ndk {
                 abiFilter "armeabi"
             }
-            packageName 'net.opusapp.player.premium'
-            buildConfigField 'boolean', 'premium', 'true'
         }
-        fatPremium {
-            packageName 'net.opusapp.player.premium'
-            buildConfigField 'boolean', 'premium', 'true'
-        }
-        x86Free {
-            versionCode 4 * 1000000 + defaultConfig.versionCode
-            ndk {
-                abiFilter "x86"
-            }
-            packageName 'net.opusapp.player'
-            buildConfigField 'boolean', 'premium', 'false'
-        }
-        mipsFree {
-            versionCode 3 * 1000000 + defaultConfig.versionCode
-            ndk {
-                abiFilter "mips"
-            }
-            packageName 'net.opusapp.player'
-            buildConfigField 'boolean', 'premium', 'false'
-        }
-        armv7Free {
-            versionCode 2 * 1000000 + defaultConfig.versionCode
-            ndk {
-                abiFilter "armeabi-v7a"
-            }
-            packageName 'net.opusapp.player'
-            buildConfigField 'boolean', 'premium', 'false'
-        }
-        armFree {
-            versionCode 1 * 1000000 + defaultConfig.versionCode
-            ndk {
-                abiFilter "armeabi"
-            }
-            packageName 'net.opusapp.player'
-            buildConfigField 'boolean', 'premium', 'false'
-        }
-        fatFree {
-            packageName 'net.opusapp.player'
-            buildConfigField 'boolean', 'premium', 'false'
+        fat {
+            flavorGroup "abi"
         }
     }
     sourceSets.main {
@@ -92,7 +69,7 @@ android {
     }
     signingConfigs {
         release {
-            storeFile file("/home/phil/Projets/android-keystore/keystore")
+            storeFile file("/mnt/net/devel/tools/android-keystore/keystore")
             storePassword "***REMOVED***"
             keyAlias "android"
             keyPassword "***REMOVED***"
@@ -125,9 +102,9 @@ dependencies {
     /* DragSortListView - directly in source tree - no longer maintained, previously : compile 'com.mobeta.android.dslv:drag-sort-listview:0.6.1' */
     compile 'com.android.support:appcompat-v7:21.0.+'
     compile 'com.android.support:support-v4:21.+'
-    compile 'com.google.android.gms:play-services:6.1.11'
 
-    compile project(':opuslicensing');
+    freeAppCompile 'com.google.android.gms:play-services:6.1.11'
+    freeAppCompile project(':opuslicensing');
 
 }
 
