Update: play store public release (candidate). Removed: inapp billing permission. Added: missing gradle scripts versionning.

--- a/opusapp/build.gradle
+++ b/opusapp/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion '20.0.0'
 
     defaultConfig {
-        applicationId "net.opusapp.player"
+        applicationId "net.opusapp.player.test"
         minSdkVersion 9
         targetSdkVersion 21
-        versionCode 5
-        versionName "1.0.0.5"
+        versionCode 7
+        versionName "1.0.0.7"
     }
 
     flavorDimensions "abi", "version"
@@ -105,6 +105,5 @@ dependencies {
 
     freeAppCompile 'com.google.android.gms:play-services:6.1.11'
     freeAppCompile project(':opuslicensing');
-
 }
 
