Updated: small changes in ffmpeg build script Updated: ffmpeg to 2.4.3 Updated: permissions for premium version. Updated: project structure (removed licensing module, now, that's code specific to free-flavor).

--- a/opusapp/src/main/AndroidManifest.xml
+++ b/opusapp/src/main/AndroidManifest.xml
@@ -4,10 +4,14 @@
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- +deezer -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.INTERNET" /> <!-- +deezer -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- +deezer -->
+
+    <supports-screens
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:largeScreens="true"
+        android:xlargeScreens="true"/>
 
     <application
         android:name=".ui.utils.PlayerApplication"
