--- a/opusapp/build.gradle
+++ b/opusapp/build.gradle
@@ -19,6 +19,7 @@ android {
             flavorDimension "version"
             applicationId 'net.opusapp.player.premium'
 
+            android.sourceSets.premiumApp.manifest.srcFile 'src/flavor-premium/AndroidManifest.xml'
             android.sourceSets.premiumApp.java.srcDirs = ['src/flavor-premium/java']
             android.sourceSets.premiumApp.res.srcDirs = ['src/flavor-premium/res']
         }
@@ -27,6 +28,7 @@ android {
             flavorDimension "version"
             applicationId 'net.opusapp.player'
 
+            android.sourceSets.freeApp.manifest.srcFile 'src/flavor-free/AndroidManifest.xml'
             android.sourceSets.freeApp.java.srcDirs = ['src/flavor-free/java']
             android.sourceSets.freeApp.res.srcDirs = ['src/flavor-free/res']
         }
@@ -100,10 +102,9 @@ dependencies {
     /* PagerSLidingTabStrip */
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     /* DragSortListView - directly in source tree - no longer maintained, previously : compile 'com.mobeta.android.dslv:drag-sort-listview:0.6.1' */
-    compile 'com.android.support:appcompat-v7:21.0.+'
-    compile 'com.android.support:support-v4:21.+'
+    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:support-v4:21.0.0'
 
-    freeAppCompile 'com.google.android.gms:play-services:6.1.11'
-    freeAppCompile project(':opuslicensing');
+    freeAppCompile 'com.google.android.gms:play-services:6.1.71'
 }
 
