Fixed: Force close when entering car mode on Android 4.3 and bellow Fixed: Force close when pluging headset if headset auto play is enabled (default) and playlist is empty.

--- a/opusapp/src/main/AndroidManifest.xml
+++ b/opusapp/src/main/AndroidManifest.xml
@@ -126,7 +126,7 @@
         </activity>
         <activity
             android:name=".ui.activities.CarModeActivity"
-            android:theme="@style/Theme.AudioKit.FullScreenActivity" >
+            android:theme="@style/AudioKit.FullScreenActivity" >
         </activity>
         <activity
             android:name=".core.service.providers.local.ui.activities.SearchPathActivity"
