Added: resource cleanup in build scripts. Updated: reduced size for "more" and "playlist" buttons. Updated: toggle buttons in play activities are now tinted with background color.

--- a/opusapp/build.gradle
+++ b/opusapp/build.gradle
@@ -79,12 +79,14 @@ android {
     }
     buildTypes {
         release {
-            runProguard true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
+            zipAlignEnabled true
+            minifyEnabled true
+            shrinkResources true
         }
         debug {
-            jniDebugBuild true
+            jniDebuggable true
         }
     }
 }
