--- a/opusapp/src/main/AndroidManifest.xml
+++ b/opusapp/src/main/AndroidManifest.xml
@@ -19,9 +19,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/application_label"
         android:theme="@style/AudioKit" >
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
 
         <service
             android:name=".core.service.PlayerService"
@@ -102,7 +99,9 @@
             android:name=".ui.activities.settings.ApplicationSettingsActivity"
             android:label="@string/activity_title_global_settings" >
         </activity>
-        <activity android:name=".ui.activities.settings.EqualizerSettingsActivity" >
+        <activity
+            android:name=".ui.activities.settings.EqualizerSettingsActivity"
+            android:label="@string/drawer_item_label_library_soundfx" >
         </activity>
         <activity
             android:name=".ui.activities.UtilDirectorySelectActivity"
@@ -132,9 +131,6 @@
             android:name=".core.service.providers.local.ui.activities.ArtSelectActivity"
             android:label="@string/activity_label_art_selection" >
         </activity>
-        <activity
-            android:name="com.google.android.gms.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
 
         <receiver android:name=".core.broadcastreceiver.CallStateBroadcastReceiver" >
             <intent-filter>
