--- a/opusapp/build.gradle
+++ b/opusapp/build.gradle
@@ -96,16 +96,14 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    /* UniversalImageLoader */
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
-    /* SlidingupPanel */
-    compile 'com.sothree.slidinguppanel:library:2.0.4'
-    /* PagerSLidingTabStrip */
-    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
-    /* DragSortListView - directly in source tree - no longer maintained, previously : compile 'com.mobeta.android.dslv:drag-sort-listview:0.6.1' */
-    compile 'com.android.support:appcompat-v7:21.0.0'
-    compile 'com.android.support:support-v4:21.0.0'
 
-    freeAppCompile 'com.google.android.gms:play-services:6.1.71'
+    compile 'com.squareup:otto:1.3.5';
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
+    compile 'com.sothree.slidinguppanel:library:2.0.4'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile 'com.android.support:appcompat-v7:21.0.2'
+    compile 'com.android.support:support-v4:21.0.2'
+
+    freeAppCompile 'com.google.android.gms:play-services:6.5.87'
 }
 
