--- a/opusapp/build.gradle
+++ b/opusapp/build.gradle
@@ -104,6 +104,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'com.android.support:support-v4:21.0.2'
 
-    freeAppCompile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.google.android.gms:play-services:6.5.87'
+//    freeAppCompile 'com.google.android.gms:play-services:6.5.87'
 }
 
