--- a/opusapp/build.gradle
+++ b/opusapp/build.gradle
@@ -97,14 +97,12 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.squareup:otto:1.3.5';
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
+    compile 'com.github.bumptech.glide:glide:3.4.0'
     compile 'com.sothree.slidinguppanel:library:2.0.4'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
-    compile 'com.android.support:appcompat-v7:21.0.2'
-    compile 'com.android.support:support-v4:21.0.2'
+    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:support-v4:21.0.3'
 
     compile 'com.google.android.gms:play-services:6.5.87'
-//    freeAppCompile 'com.google.android.gms:play-services:6.5.87'
 }
 
