--- a/opusapp/build.gradle
+++ b/opusapp/build.gradle
@@ -97,7 +97,9 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
+    compile 'com.squareup:otto:1.3.5'
     compile 'com.github.bumptech.glide:glide:3.4.0'
+
     compile 'com.sothree.slidinguppanel:library:2.0.4'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.android.support:appcompat-v7:21.0.3'
