--- a/opusapp/build.gradle
+++ b/opusapp/build.gradle
@@ -103,8 +103,8 @@ dependencies {
     compile 'com.sothree.slidinguppanel:library:2.0.4'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:mediarouter-v7:20.0.0'
     compile 'com.android.support:support-v4:21.0.3'
-
     compile 'com.google.android.gms:play-services:6.5.87'
 }
 
