--- a/opusapp/build.gradle
+++ b/opusapp/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "net.opusapp.player.test"
         minSdkVersion 9
         targetSdkVersion 21
-        versionCode 20
-        versionName "1.0.4.1"
+        versionCode 21
+        versionName "1.0.5.0"
     }
 
     flavorDimensions "abi", "version"
@@ -70,7 +70,7 @@ android {
     }
     signingConfigs {
         release {
-            storeFile file("/mnt/net/devel/tools/android-keystore/keystore")
+            storeFile file("/Users/phil/Documents/Développement/android-keystore/keystore")
             storePassword "***REMOVED***"
             keyAlias "android"
             keyPassword "***REMOVED***"
@@ -103,7 +103,7 @@ dependencies {
     compile 'com.sothree.slidinguppanel:library:2.0.4'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.android.support:mediarouter-v7:20.0.0'
+//    compile 'com.android.support:mediarouter-v7:20.0.0'
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
 }
